--- a/まとめ.md
+++ b/まとめ.md
@@ -26,12 +26,14 @@
 | < | より小さい |  |
 | >= | 以上 |  |
 | <= | 以下 |  |
-| != | 等しくない |  |
+| !=, <> | 等しくない |  |
 | AND | 2つの条件のうち,両方がTRUE |  |
 | OR | 2つの条件のうち,少なくともどちらか一方はTRUE |  |
 | NOT | 式の結果を反転する | IN句などと一緒に使うことが多い |
 | IN | 対象のフィールドが式一覧の中のどれかに一致する | OR句でも実現できるが対象が多く煩雑になる時などに使用する |
 | LIKE | 対象のフィールドがパターンに一致する | 文字列の部分一致検索などに使用する |
+| BETWEEN a AND b | 対象のフィールドがaとbの範囲内にある |  |
+| IS NULL | 対象のフィールドがNULLである | NULLでないデータを検索する場合は IS NOT NULL |
 
 ### LIKEのパターンについて
 
@@ -66,15 +68,59 @@
 - ```SELECT columnname FROM tablename WHERE (条件文);```:条件文を満たすレコードの内容を射影する
 
 ### INSERT データを追加する
-- ```INSERT INTO tabelname VALUES (追加するレコードの値);```:指定したテーブルに新たなレコードを追加する
+- ```INSERT INTO tablename VALUES (追加するレコードの値);```:指定したテーブルに新たなレコードを追加する
     - データの型が合っていない場合レコードの追加が失敗するのでテーブル定義を確認して実行する
+    - NULLのフィールドを追加したいときはそのカラムの位置にNULLを指定して追加する
 
 ### UPDATE データを更新する
 - ```UPDATE tabelname SET colmnname = 値;```:指定したテーブルの全レコードの指定したカラムの値を更新する
     - 全てのレコードのデータを変更できるが使用場面はあまりない
 - ```UPDATE tabelname SET colmnname = 値 WHERE (条件文);```:指定したテーブルのレコードのうち,条件文を満たすものの指定したカラムの値を更新する
+    - NULLとして更新したいときはそのカラムの位置にNULLを指定して更新する
 
-### UPDATE データを削除する
+### DELETE データを削除する
 - ```DELETE FROM  tabelname;```:指定したテーブルの全レコードを削除する
     - テーブルの内容が消えるため,注意して使用する
 - ```DELETE FROM  tabelname WHERE (条件文);```:指定したテーブルのレコードのうち,条件文を満たすものを削除する
+
+
+## SELECT文の加工
+- SELECT文は修飾子を使用することで検索結果を加工することができる
+
+### DISTINCT
+
+- 検索結果から重複を削除する
+- ```SELECT DISTINCT columnname FROM tablename WHERE (条件文);```:指定したテーブルのレコードのうち条件文を満たすものの重複削除結果を射影する
+
+### ORDER BY 
+- 検索結果を並び変える
+- ```SELECT columnname FROM tablename WHERE (条件文) ORDER BY columnname (並び順のオプション[ASC or DESC]);```:指定したテーブルのレコードのうち条件文を満たすものの検索結果を指定したレコードを基準として並べ替えた結果を射影する
+- ```ORDER BY columnname1 (並び順のオプション[ASC or DESC]) columnname2 (並び順のオプション[ASC or DESC])```のように複数の列を基準にして並べ替えることができる。（この場合先にcolumnname1を基準にして並べ替えを実行し,その結果で順位が同列のものをcolumnname2を基準として並べ替える）
+- 列番号を指定して実行できる
+
+### OFFSET ROWS FETCH NEXT ONLY
+- 行数を限定して取得する
+- ```SELECT columnname FROM tablename WHERE (条件文) ORDER BY columnname (並び順のオプション[ASC or DESC]) OFFSET offset ROWS FETCH NEXT n ROWS ONLY;```:取得した結果からoffset個の行を除いてn行目までを射影する
+- ```FETCH NEXT n ROWS ONLY```の代わりに```LIMIT n```も使用できる
+
+
+## 集合演算子 （UNION, EXPCEPT, INTERSECT）
+- SELECT文の結果を組み合わせる
+- 検索結果の型が一致している必要がある
+
+### UNION 
+- 検索結果の和集合を求める
+- ```SELECT文1; UNION SELECT文2;```:SELECT文の結果の集合の和を求める。この書き方では重複を削除して表示する
+- ```UNION ALL```で重複削除せずに全て表示する
+
+### EXCEPT
+- 検索結果の差集合を求める
+- ```SELECT文1; EXCEPT SELECT文2;```:SELECT文の結果の集合の差を求める。この書き方では重複を削除して表示する
+- ```EXCEPT ALL```で重複削除せずに全て表示する
+
+### INTERSECT
+- 検索結果の積集合を求める
+- ```SELECT文1; INTERSECT SELECT文2;```:SELECT文の結果の集合の積を求める。この書き方では重複を削除して表示する
+- ```INTERSECT ALL```で重複削除せずに全て表示する
+
+
