--- a/まとめ.md
+++ b/まとめ.md
@@ -35,6 +35,14 @@
 | BETWEEN a AND b | 対象のフィールドがaとbの範囲内にある |  |
 | IS NULL | 対象のフィールドがNULLである | NULLでないデータを検索する場合は IS NOT NULL |
 
+## SQLでの集計関数
+| 関数名 | 数値型の時 | 文字列型の時 |
+| -- | -- | -- |
+| SUM | 各数値の合計 |  |
+| MAX | 各数値の最大 | 並び替えた時に最後の文字列 |
+| MIN | 各数値の最小 | 並び替えた時に最初の文字列 |
+| AVE | 各数値の平均 |  |
+| COUNT | 行数 |  |
 ### LIKEのパターンについて
 
 - システムや環境によってシングルクォテーションの場合とダブルクォテーションの場合がある
@@ -88,15 +96,22 @@
 - SELECT文は修飾子を使用することで検索結果を加工することができる
 
 ### DISTINCT
-
 - 検索結果から重複を削除する
 - ```SELECT DISTINCT columnname FROM tablename WHERE (条件文);```:指定したテーブルのレコードのうち条件文を満たすものの重複削除結果を射影する
+
+### AS
+- 検索結果のヘッダーを加工する
+- ```SELECT columnname AS newcolumnname FROM tablename;```:取得した結果をnewcolumnnameの行として表示する
 
 ### ORDER BY 
 - 検索結果を並び変える
 - ```SELECT columnname FROM tablename WHERE (条件文) ORDER BY columnname (並び順のオプション[ASC or DESC]);```:指定したテーブルのレコードのうち条件文を満たすものの検索結果を指定したレコードを基準として並べ替えた結果を射影する
 - ```ORDER BY columnname1 (並び順のオプション[ASC or DESC]) columnname2 (並び順のオプション[ASC or DESC])```のように複数の列を基準にして並べ替えることができる。（この場合先にcolumnname1を基準にして並べ替えを実行し,その結果で順位が同列のものをcolumnname2を基準として並べ替える）
 - 列番号を指定して実行できる
+
+### GROUP BY 
+- 検索結果をグループ化する
+- ```SELECT columnname FROM tablename WHERE (条件文) GROUP BY;```:
 
 ### OFFSET ROWS FETCH NEXT ONLY
 - 行数を限定して取得する
